fix: bolinha aumentando não estava aumentando

--- a/bolinha_aumentando.html
+++ b/bolinha_aumentando.html
@@ -33,7 +33,7 @@
 
         desenhaCirculo(100, 100, raio,'blue');
 
-        raio = raio+sentido;
+        raio = raio+fatorCrescimento;
 
     }
 
